2006-06-08	Benedikt Meurer <benny@xfce.org>
	* exo-helper/helpers/exo-compose-mail-0.3: Add simple Perl script to
	  support extended mailto:-URIs for all included MailReaders. For
	  example, it is now possible to specify a subject or attach files
	  when composing mails using exo-open.
	* exo-helper/helpers/: Use exo-compose-mail-0.3 for all included
	  MailReaders, and add Mutt and Sylpheed to the list.
	* acinclude.m4, configure.in.in: Check for required Perl modules,
	  otherwise exo-compose-mail-0.3 will fail "silently".
	* docs/reference/exo-open.xml: Update the exo-open manual page with
	  a short description of the extended mailto:-syntax.
	* po/POTFILES.in: Add new files here.
	* po/libexo-0.3.pot, po/*.po: Updated.




(Old svn revision: 22035)

--- a/exo-helper/helpers/Makefile.am
+++ b/exo-helper/helpers/Makefile.am
@@ -4,35 +4,44 @@ defaultsdir = $(sysconfdir)/xdg/xfce4
 defaults_DATA = helpers.rc
 
 desktopdir = $(datadir)/xfce4/helpers
-desktop_in_files =							\
-	Terminal.desktop.in						\
-	balsa.desktop.in						\
-	debian-sensible-browser.desktop.in				\
-	debian-x-terminal-emulator.desktop.in				\
-	epiphany.desktop.in						\
-	eterm.desktop.in						\
-	evolution.desktop.in						\
-	firefox.desktop.in						\
-	galeon.desktop.in						\
-	gnome-terminal.desktop.in					\
-	kmail.desktop.in						\
-	konqueror.desktop.in						\
-	mozilla-browser.desktop.in					\
-	mozilla-mailer.desktop.in					\
-	opera-browser.desktop.in					\
-	opera-mailer.desktop.in						\
-	sylpheed-claws.desktop.in					\
-	thunderbird.desktop.in						\
-	xterm.desktop.in
-desktop_DATA =								\
-	$(desktop_in_files:.desktop.in=.desktop)
+desktop_in_in_files =							\
+	Terminal.desktop.in.in						\
+	balsa.desktop.in.in						\
+	debian-sensible-browser.desktop.in.in				\
+	debian-x-terminal-emulator.desktop.in.in			\
+	epiphany.desktop.in.in						\
+	eterm.desktop.in.in						\
+	evolution.desktop.in.in						\
+	firefox.desktop.in.in						\
+	galeon.desktop.in.in						\
+	gnome-terminal.desktop.in.in					\
+	kmail.desktop.in.in						\
+	konqueror.desktop.in.in						\
+	mozilla-browser.desktop.in.in					\
+	mozilla-mailer.desktop.in.in					\
+	mutt.desktop.in.in						\
+	opera-browser.desktop.in.in					\
+	opera-mailer.desktop.in.in					\
+	sylpheed.desktop.in.in						\
+	sylpheed-claws.desktop.in.in					\
+	thunderbird.desktop.in.in					\
+	xterm.desktop.in.in
+desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
+desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
+%.desktop.in: %.desktop.in.in
+	sed -e "s,\@libexecdir\@,$(libexecdir),g" < $< > $@
 @INTLTOOL_DESKTOP_RULE@
 
+libexec_SCRIPTS =							\
+	exo-compose-mail-0.3
+
 DISTCLEANFILES =							\
+	$(desktop_in_files)						\
 	$(desktop_DATA)
 
 EXTRA_DIST =								\
 	$(defaults_DATA)						\
-	$(desktop_in_files)
+	$(desktop_in_in_files)						\
+	exo-compose-mail-0.3
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
