--- a/configure.in.in
+++ b/configure.in.in
@@ -78,6 +78,14 @@ AC_PROG_LIBTOOL()
 AC_CHECK_PROGS([PERL], [perl5 perl])
 
 dnl ***************************************
+dnl *** Check for required Perl modules ***
+dnl ***************************************
+AC_PROG_PERL_MODULES([URI::Escape URI::file URI::URL], [],
+[
+  AC_MSG_ERROR([Atleast one of the required Perl modules (URI::Escape, URI::file and URI::URL) was not found on your system])
+])
+
+dnl ***************************************
 dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
