--- a/exo-helper/helpers/sylpheed-claws.desktop.in.in
+++ b/exo-helper/helpers/sylpheed-claws.desktop.in.in
@@ -8,4 +8,4 @@ StartupNotify=true
 X-XFCE-Binaries=sylpheed-claws;
 X-XFCE-Category=MailReader
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParameter=%B --compose "%s";
+X-XFCE-CommandsWithParameter=@libexecdir@/exo-compose-mail-0.3 sylpheed %B "mailto:%s";
