--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -37,23 +37,26 @@ exo-helper/exo-helper-utils.c
 exo-helper/exo-helper.c
 exo-helper/exo-preferred-applications-settings.c
 exo-helper/exo-preferred-applications.desktop.in
-exo-helper/helpers/Terminal.desktop.in
-exo-helper/helpers/balsa.desktop.in
-exo-helper/helpers/debian-sensible-browser.desktop.in
-exo-helper/helpers/debian-x-terminal-emulator.desktop.in
-exo-helper/helpers/epiphany.desktop.in
-exo-helper/helpers/eterm.desktop.in
-exo-helper/helpers/evolution.desktop.in
-exo-helper/helpers/firefox.desktop.in
-exo-helper/helpers/galeon.desktop.in
-exo-helper/helpers/gnome-terminal.desktop.in
-exo-helper/helpers/kmail.desktop.in
-exo-helper/helpers/konqueror.desktop.in
-exo-helper/helpers/mozilla-browser.desktop.in
-exo-helper/helpers/mozilla-mailer.desktop.in
-exo-helper/helpers/opera-browser.desktop.in
-exo-helper/helpers/opera-mailer.desktop.in
-exo-helper/helpers/thunderbird.desktop.in
-exo-helper/helpers/xterm.desktop.in
+exo-helper/helpers/Terminal.desktop.in.in
+exo-helper/helpers/balsa.desktop.in.in
+exo-helper/helpers/debian-sensible-browser.desktop.in.in
+exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in
+exo-helper/helpers/epiphany.desktop.in.in
+exo-helper/helpers/eterm.desktop.in.in
+exo-helper/helpers/evolution.desktop.in.in
+exo-helper/helpers/firefox.desktop.in.in
+exo-helper/helpers/galeon.desktop.in.in
+exo-helper/helpers/gnome-terminal.desktop.in.in
+exo-helper/helpers/kmail.desktop.in.in
+exo-helper/helpers/konqueror.desktop.in.in
+exo-helper/helpers/mozilla-browser.desktop.in.in
+exo-helper/helpers/mozilla-mailer.desktop.in.in
+exo-helper/helpers/mutt.desktop.in.in
+exo-helper/helpers/opera-browser.desktop.in.in
+exo-helper/helpers/opera-mailer.desktop.in.in
+exo-helper/helpers/sylpheed.desktop.in.in
+exo-helper/helpers/sylpheed-claws.desktop.in.in
+exo-helper/helpers/thunderbird.desktop.in.in
+exo-helper/helpers/xterm.desktop.in.in
 
 exo-open/main.c
