2006-07-09	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.1.8beta2 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Add missing translator credits.
	* po/*.po: Update Project-Id-Version.
	* exo.spec.in: Add missing files.




(Old svn revision: 22320)

--- a/exo.spec.in
+++ b/exo.spec.in
@@ -56,6 +56,7 @@ fi
 
 %files
 %defattr(-,root,root)
+%{_bindir}/exo-desktop-item-edit
 %{_bindir}/exo-open
 %{_bindir}/exo-preferred-applications
 %{_datadir}/applications
