--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -26,6 +26,7 @@ exo/exo-xsession-client.c
 exo-csource/main.c
 
 exo-desktop-item-edit/exo-die-command-entry.c
+exo-desktop-item-edit/exo-die-desktop-model.c
 exo-desktop-item-edit/exo-die-editor.c
 exo-desktop-item-edit/exo-die-enum-types.c
 exo-desktop-item-edit/main.c
