2006-08-14	Benedikt Meurer <benny@xfce.org>
	* exo-helper/helpers/urxvt.desktop.in.in,
	  exo-helper/helpers/Makefile.am: Add support for rxvt-unicode.
	  Bug #2158.
	* po/POTFILES.in: Add new files here.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.




(Old svn revision: 22758)

--- a/exo-helper/helpers/Makefile.am
+++ b/exo-helper/helpers/Makefile.am
@@ -25,6 +25,7 @@ desktop_in_in_files =							\
 	sylpheed.desktop.in.in						\
 	sylpheed-claws.desktop.in.in					\
 	thunderbird.desktop.in.in					\
+	urxvt.desktop.in.in						\
 	xterm.desktop.in.in
 desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
