--- a/exo-helper/helpers/mutt.desktop.in.in
+++ b/exo-helper/helpers/mutt.desktop.in.in
@@ -7,5 +7,5 @@ _Name=Mutt
 StartupNotify=false
 X-XFCE-Binaries=mutt;
 X-XFCE-Category=MailReader
-X-XFCE-Commands=exo-open --launch Terminal %B;
-X-XFCE-CommandsWithParameter=exo-open --launch Terminal @libexecdir@/exo-compose-mail-0.3 mutt %B "mailto:%s";
+X-XFCE-Commands=exo-open --launch TerminalEmulator %B;
+X-XFCE-CommandsWithParameter=exo-open --launch TerminalEmulator @libexecdir@/exo-compose-mail-0.3 mutt %B "mailto:%s";
