--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 exo/exo-binding.c
 exo/exo-cell-renderer-ellipsized-text.c
+exo/exo-cell-renderer-icon.c
 exo/exo-config.c
 exo/exo-ellipsized-label.c
 exo/exo-execute.c
@@ -7,11 +8,15 @@ exo/exo-gdk-pixbuf-extensions.c
 exo/exo-gobject-extensions.c
 exo/exo-gtk-extensions.c
 exo/exo-icon-bar.c
+exo/exo-icon-chooser-dialog.c
+exo/exo-icon-chooser-model.c
 exo/exo-icon-view.c
 exo/exo-md5.c
 exo/exo-pango-extensions.c
 exo/exo-private.c
 exo/exo-string.c
+exo/exo-thumbnail-preview.c
+exo/exo-thumbnail.c
 exo/exo-toolbars-editor-dialog.c
 exo/exo-toolbars-editor.c
 exo/exo-toolbars-model.c
