--- a/exo/exo-config.h.in
+++ b/exo/exo-config.h.in
@@ -51,6 +51,15 @@ const gchar *exo_check_version (guint required_major,
                                 guint required_minor,
                                 guint required_micro);
 
+/* verify that G_GNUC_NULL_TERMINATED is defined */
+#if !defined(G_GNUC_NULL_TERMINATED)
+#if __GNUC__ >= 4
+#define G_GNUC_NULL_TERMINATED __attribute__((__sentinel__))
+#else
+#define G_GNUC_NULL_TERMINATED
+#endif /* __GNUC__ */
+#endif /* !defined(G_GNUC_NULL_TERMINATED) */
+
 /* verify that G_GNUC_WARN_UNUSED_RESULT is defined */
 #if !defined(G_GNUC_WARN_UNUSED_RESULT)
 #if __GNUC__ > 3 || (__GNUC__ == 3 && __GNUC_MINOR__ >= 4)
