--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -55,7 +55,21 @@ test_exo_string_LDADD =							\
 	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_MAJOR).$(LIBEXO_VERSION_MINOR).la
 
 noinst_PROGRAMS =							\
+	test-exo-icon-chooser-dialog					\
 	test-exo-wrap-table
+
+test_exo_icon_chooser_dialog_SOURCES =					\
+	test-exo-icon-chooser-dialog.c
+
+test_exo_icon_chooser_dialog_CFLAGS =					\
+	$(GTK_CFLAGS)							\
+	$(LIBXFCE4UTIL_CFLAGS)
+
+test_exo_icon_chooser_dialog_DEPENDENCIES =				\
+	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_MAJOR).$(LIBEXO_VERSION_MINOR).la
+
+test_exo_icon_chooser_dialog_LDADD =					\
+	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_MAJOR).$(LIBEXO_VERSION_MINOR).la
 
 test_exo_wrap_table_SOURCES =						\
 	test-exo-wrap-table.c
