2006-08-26	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Fix typo, where -NDEBUG was used instead of
	  -DNDEBUG as preprocessor flag. Bug #2221.




(Old svn revision: 22887)

--- a/configure.in.in
+++ b/configure.in.in
@@ -252,7 +252,7 @@ else
   AC_MSG_RESULT([$enable_debug])
 
   dnl Disable debugging (release build)
-  CFLAGS="$CFLAGS -NDEBUG"
+  CFLAGS="$CFLAGS -DNDEBUG"
 
   dnl Disable object cast checks
   CFLAGS="$CFLAGS -DG_DISABLE_CAST_CHECKS"
