2006-09-02	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.1.10rc1 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* exo.spec.in: Add missing files.




(Old svn revision: 23008)

--- a/exo.spec.in
+++ b/exo.spec.in
@@ -62,6 +62,7 @@ fi
 %{_datadir}/applications
 %{_datadir}/icons
 %{_datadir}/locale
+%{_datadir}/pixmaps
 %{_datadir}/xfce4
 %{_libdir}/lib*.so.*
 %{_libdir}/xfce4/mcs-plugins/*
