2006-09-28	Benedikt Meurer <benny@xfce.org>
	* configure.in.in, exo-helper/Makefile.am: Fix installation on Win32
	  variants. Bug #2463.




(Old svn revision: 23536)

--- a/exo-helper/Makefile.am
+++ b/exo-helper/Makefile.am
@@ -82,14 +82,19 @@ exo_preferred_applications_settings_la_LDFLAGS =			\
 	-module								\
 	-no-undefined
 
+if PLATFORM_WIN32
+exo_preferred_applications_settings_la_LDFLAGS +=			\
+	-export-symbols $(datadir)/xfce4/devel/mcs-manager.def
+endif
+
 exo_preferred_applications_settings_la_SOURCES =			\
 	exo-preferred-applications-settings.c
 
 exo_preferred_applications_settings_la_CFLAGS =				\
-	@XFCE_MCS_MANAGER_CFLAGS@
+	$(XFCE_MCS_MANAGER_CFLAGS)
 
 exo_preferred_applications_settings_la_LIBADD =				\
-	@XFCE_MCS_MANAGER_LIBS@
+	$(XFCE_MCS_MANAGER_LIBS)
 endif
 
 ##
