2006-09-28	Benedikt Meurer <benny@xfce.org>
	* icons/24x24/, configure.in.in, icons/Makefile.am: Install the
	  preferences-desktop-default-applications.png in 24x24 as well.




(Old svn revision: 23539)

--- a/configure.in.in
+++ b/configure.in.in
@@ -355,6 +355,7 @@ exo-helper/helpers/Makefile
 exo-open/Makefile
 exo-support/Makefile
 icons/Makefile
+icons/24x24/Makefile
 icons/48x48/Makefile
 pixmaps/Makefile
 po/Makefile.in
