2006-10-30      Jean-François <pollux@xfce.org>         * configure.in.in, docs/manual/fr,         docs/manual/fr/exo-preferred-applications.xml.in,         docs/manual/fr/images, 	docs/manual/fr/images/exo-preferred-applications-webbrowser-menu.png,         docs/manual/fr/images/exo-preferred-applications-internet.png, 	docs/manual/fr/images/exo-preferred-applications-webbrowser-custom.png,         docs/manual/fr/images/exo-preferred-applications-utilities.png,         docs/manual/fr/images/Makefile.am, docs/manual/fr/Makefile.am,         docs/manual/Makefile.am, po-doc/LINGUAS, po-doc/fr.po,         po-doc/ChangeLog: Add French translations of the manual by 	Maximilian Schleiss. Bug #2478.
(Old svn revision: 23561)

--- a/configure.in.in
+++ b/configure.in.in
@@ -339,6 +339,9 @@ docs/manual/Makefile
 docs/manual/C/Makefile
 docs/manual/C/exo-preferred-applications.xml
 docs/manual/C/images/Makefile
+docs/manual/fr/Makefile
+docs/manual/fr/exo-preferred-applications.xml
+docs/manual/fr/images/Makefile
 docs/manual/ja/Makefile
 docs/manual/ja/exo-preferred-applications.xml
 docs/manual/ja/images/Makefile
