--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -73,5 +73,12 @@ exo-helper/helpers/urxvt.desktop.in.in
 exo-helper/helpers/w3m.desktop.in.in
 exo-helper/helpers/xterm.desktop.in.in
 
+exo-mount/exo-mount-fstab.c
+exo-mount/exo-mount-hal.c
+exo-mount/exo-mount-utils.c
+exo-mount/main.c
+
+exo-mount-notify/main.c
+
 exo-open/main.c
 
