2007-01-06	Benedikt Meurer <benny@xfce.org>
	* exo-mount-notify/main.c(signal_io_func): Do not block Thunar's
	  unmount operation waiting for the last notification to go
	  away.
	* configure.in.in, exo-mount/: Be smarter when checking device files
	  for equality, comparing them by their major/minor device ids instead
	  of their paths.




(Old svn revision: 24278)

--- a/configure.in.in
+++ b/configure.in.in
@@ -115,7 +115,7 @@ dnl ************************************
 dnl *** Check for standard functions ***
 dnl ************************************
 AC_FUNC_MMAP()
-AC_CHECK_FUNCS([getfsspec getfsstat getmntent regexec setmntent])
+AC_CHECK_FUNCS([getfsstat getmntent regexec setfsent setmntent])
 
 dnl ******************************************
 dnl *** Check for Message Digest functions ***
