--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -36,6 +36,8 @@ exo-desktop-item-edit/exo-die-editor.c
 exo-desktop-item-edit/exo-die-enum-types.c
 exo-desktop-item-edit/main.c
 
+exo-hal/exo-hal.c
+
 exo-helper/exo-helper-chooser-dialog.c
 exo-helper/exo-helper-chooser.c
 exo-helper/exo-helper-launcher-dialog.c
