2007-01-10	Benedikt Meurer <benny@xfce.org>
	* exo/exo-md5.c(exo_md5_digest_dup): Fix invalid usage of g_memdup().
	* exo/exo-mount-point.{c,h}, exo/Makefile.am, exo/exo.symbols,
	  exo/exo.h: Import new module ExoMountPoint, which handles the
	  retrieval of active or configured mount points. This was merged
	  here to avoid duplicating the code in several other applications.
	  For example, Thunar, exo-mount and thunar-volman included similar
	  code somehow. The code itself is highly platform-depend and so its
	  easier to manage it in a central place.
	* docs/reference/: Update reference manual.
	* exo-mount/: Use the functions from the ExoMountPoint module.
	* tests/: Add a test case for the ExoMountPoint module.
	* po/POTFILES.in: Add new files here.




(Old svn revision: 24347)

--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -25,6 +25,7 @@ libexo_headers =							\
 	exo-icon-chooser-dialog.h					\
 	exo-icon-view.h							\
 	exo-md5.h							\
+	exo-mount-point.h						\
 	exo-pango-extensions.h						\
 	exo-string.h							\
 	exo-toolbars-editor-dialog.h					\
@@ -74,6 +75,7 @@ libexo_0_3_la_SOURCES =							\
 	exo-icon-chooser-model.h					\
 	exo-icon-view.c							\
 	exo-md5.c							\
+	exo-mount-point.c						\
 	exo-pango-extensions.c						\
 	exo-private.c							\
 	exo-private.h							\
