--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,6 +12,7 @@ exo/exo-icon-chooser-dialog.c
 exo/exo-icon-chooser-model.c
 exo/exo-icon-view.c
 exo/exo-md5.c
+exo/exo-mount-point.c
 exo/exo-pango-extensions.c
 exo/exo-private.c
 exo/exo-string.c
