--- a/exo-helper/helpers/sylpheed-claws.desktop.in.in
+++ b/exo-helper/helpers/sylpheed-claws.desktop.in.in
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Encoding=UTF-8
 Version=1.0
-Icon=sylpheed-claws
+Icon=claws-mail
 Type=X-XFCE-Helper
-_Name=Sylpheed Claws
+_Name=Claws Mail
 StartupNotify=true
-X-XFCE-Binaries=sylpheed-claws;
+X-XFCE-Binaries=claws-mail;sylpheed-claws-gtk2;sylpheed-claws
 X-XFCE-Category=MailReader
 X-XFCE-Commands=%B;
 X-XFCE-CommandsWithParameter=@libexecdir@/exo-compose-mail-0.3 sylpheed %B "mailto:%s";
