2007-05-09	Benedikt Meurer <benny@xfce.org>
	* COPYING.LIB, COPYING, Makefile.am: Ship LGPL and GPL license
	  files. Bug #2895.




(Old svn revision: 25690)

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,6 +40,7 @@ rpm: dist
 EXTRA_DIST =								\
 	AUTHORS								\
 	COPYING								\
+	COPYING.LIB							\
 	ChangeLog							\
 	HACKING								\
 	INSTALL								\
