--- a/configure.in.in
+++ b/configure.in.in
@@ -87,6 +87,7 @@ dnl *** Check for basic programs ***
 dnl ********************************
 AM_PROG_AS()
 AC_PROG_CC()
+AM_PROG_CC_C_O()
 AC_PROG_INSTALL()
 AC_PROG_INTLTOOL([0.31], [no-xml])
 AC_PROG_LIBTOOL()
