2007-05-22	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Prefer -lmd over -lmd5.
	* docs/reference/: Update reference manual.




(Old svn revision: 25739)

--- a/configure.in.in
+++ b/configure.in.in
@@ -121,7 +121,7 @@ AC_CHECK_FUNCS([getfsstat getmntent getvfsstat regexec setfsent setmntent])
 dnl ******************************************
 dnl *** Check for Message Digest functions ***
 dnl ******************************************
-AC_SEARCH_LIBS([MD5Init], [md5 md c], \
+AC_SEARCH_LIBS([MD5Init], [md md5 c], \
                [AC_DEFINE([HAVE_MD5INIT], [1], [Define if MD5Init present])])
 
 dnl ******************************
