remove trailing parens on AC_INIT version info to work around bug in intltool 0.35.x and 0.36.x
(Old svn revision: 26180)

--- a/configure.in.in
+++ b/configure.in.in
@@ -30,7 +30,7 @@ AC_COPYRIGHT([Copyright (c) 2004-2007 os-cillation.
 All rights reserved.
         
 Written by Benedikt Meurer <benny@xfce.org>.])
-AC_INIT([exo], [libexo_version()], [http://bugzilla.xfce.org/])
+AC_INIT([exo], [libexo_version], [http://bugzilla.xfce.org/])
 AC_PREREQ([2.50])
 AC_REVISION([$Id$])
 AC_CANONICAL_TARGET()
