add files to POTFILES.in and POTFILES.skip to make intltool-update happy
(Old svn revision: 26182)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -46,6 +46,7 @@ exo-helper/exo-helper-utils.c
 exo-helper/exo-helper.c
 exo-helper/exo-preferred-applications-settings.c
 exo-helper/exo-preferred-applications.desktop.in
+exo-helper/main.c
 exo-helper/helpers/Terminal.desktop.in.in
 exo-helper/helpers/aterm.desktop.in.in
 exo-helper/helpers/balsa.desktop.in.in
