2007-12-02	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.4 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* docs/reference/Makefile.am: Fix dist building.




(Old svn revision: 26415)

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -74,4 +74,7 @@ if MAINTAINER_MODE
 	xsltproc -nonet http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $<
 endif
 
+# required for gtk-doc
+dist-hook: all
+
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
