2008-08-25  Brian Tarricone <kelnos@xfce.org>
    * exo-helper/exo-preferred-applications.desktop.in: Include
      preferred apps dialog in new settings manager.

(Old svn revision: 27571)

--- a/exo-helper/exo-preferred-applications.desktop.in
+++ b/exo-helper/exo-preferred-applications.desktop.in
@@ -4,11 +4,10 @@ Version=1.0
 Exec=exo-preferred-applications
 Icon=preferences-desktop-default-applications
 Type=Application
-Categories=X-XFCE;Settings;DesktopSettings;
+Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 Terminal=false
 StartupNotify=true
 _GenericName=Preferred Applications
 _Name=Xfce 4 Preferred Applications
 _Comment=Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)
-
