* exo-helper/helpers/Makefile.am, 	  exo-helper/helpers/midori.desktop.in.in: Add Midori helper. Patch 		provided by Christian Dywan. This closes bug #4446.
(Old svn revision: 28132)

--- a/exo-helper/helpers/Makefile.am
+++ b/exo-helper/helpers/Makefile.am
@@ -21,6 +21,7 @@ desktop_in_in_files =							\
 	konqueror.desktop.in.in						\
 	links.desktop.in.in						\
 	lynx.desktop.in.in						\
+	midori.desktop.in.in						\
 	mozilla-browser.desktop.in.in					\
 	mozilla-mailer.desktop.in.in					\
 	mutt.desktop.in.in						\
