Update NEWS Fix POTFILES.in (add midori.desktop.in.in)
(Old svn revision: 28198)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -62,6 +62,7 @@ exo-helper/helpers/kmail.desktop.in.in
 exo-helper/helpers/konqueror.desktop.in.in
 exo-helper/helpers/links.desktop.in.in
 exo-helper/helpers/lynx.desktop.in.in
+exo-helper/helpers/midori.desktop.in.in
 exo-helper/helpers/mozilla-browser.desktop.in.in
 exo-helper/helpers/mozilla-mailer.desktop.in.in
 exo-helper/helpers/mutt.desktop.in.in
