* configure.in.in: Add 'svn' version tag. 	* exo-helper/exo-helper-chooser-dialog.[ch]: Add function to 	  retrieve the toplevel container beneath the GtkDialog's 	  GtkVBox. 	* exo-helper/exo-preferred-applications.desktop.in: Add 	  X-XfcePluggable and X-XfceHelpFile keys. 	* exo-helper/exo-preferred-applications.in: Pass any extra 	  command-line arguments on to exo-helper-0.3. 	* exo-helper/main.c: Use GOption framework for parsing the 	  command line.  Add --socket-id parameter so the dialog can 	  be embedded in the settings manager.
(Old svn revision: 28357)

--- a/exo-helper/exo-preferred-applications.desktop.in
+++ b/exo-helper/exo-preferred-applications.desktop.in
@@ -11,3 +11,5 @@ StartupNotify=true
 _GenericName=Preferred Applications
 _Name=Xfce 4 Preferred Applications
 _Comment=Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)
+X-XfcePluggable=true
+X-XfceHelpFile=exo-preferred-applications.html
