--- a/configure.in.in
+++ b/configure.in.in
@@ -12,10 +12,10 @@ dnl ***************************
 m4_define([libexo_verinfo], [5:0:5])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
-m4_define([libexo_version_micro], [91])
+m4_define([libexo_version_micro], [92])
 m4_define([libexo_version_nano], [])
 m4_define([libexo_version_build], [r@REVISION@])
-m4_define([libexo_version_tag], [svn])
+m4_define([libexo_version_tag], [])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [svn], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
 
 dnl ********************************************
@@ -26,7 +26,7 @@ m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [svn], [full], [
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
-AC_COPYRIGHT([Copyright (c) 2004-2007 os-cillation.
+AC_COPYRIGHT([Copyright (c) 2004-2008 os-cillation.
 All rights reserved.
         
 Written by Benedikt Meurer <benny@xfce.org>.])
