* configure.in.in: Add Makefiles for Spanish docs.
(Old svn revision: 29273)

--- a/configure.in.in
+++ b/configure.in.in
@@ -382,6 +382,9 @@ docs/manual/Makefile
 docs/manual/C/Makefile
 docs/manual/C/exo-preferred-applications.xml
 docs/manual/C/images/Makefile
+docs/manual/es/Makefile
+docs/manual/es/exo-preferred-applications.xml
+docs/manual/es/images/Makefile
 docs/manual/fr/Makefile
 docs/manual/fr/exo-preferred-applications.xml
 docs/manual/fr/images/Makefile
